2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_start.c (GC_start_rtn_prepare_thread): Change return
	type to GC_thread.
	* pthread_start.c (GC_inner_start_routine): Pass the current
	thread descriptor to pthread_cleanup_push (same as in
	win32_threads.c).
	* pthread_stop_world.c (GC_push_all_stacks): Rename "me" local
	variable to "self".
	* win32_threads.c (GC_push_all_stacks): Ditto.
	* pthread_stop_world.c (GC_suspend_all, GC_start_world): Rename
	"my_thread" local variable to "self".
	* pthread_support.c (GC_unregister_my_thread_inner): New static
	function.
	* pthread_support.c (GC_unregister_my_thread,
	GC_thread_exit_proc): Use GC_unregister_my_thread_inner.
	* win32_threads.c (GC_register_my_thread, GC_unregister_my_thread,
	GC_do_blocking_inner): Rename "t" local variable to "thread_id".
	* win32_threads.c (GC_wait_marker, GC_notify_all_marker): Rename
	"id" local variable to "thread_id".

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_unregister_my_thread): Call pthread_self
	only once.
	* win32_threads.c (GC_pthread_start_inner): Ditto.
	* pthread_support.c (GC_unregister_my_thread): Add debug output.
	* win32_threads.c (GC_unregister_my_thread): Ditto.
	* pthread_support.c (GC_register_my_thread,
	GC_start_rtn_prepare_thread): Rename "my_pthread" local variable
	to "self".

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc.h (GC_HIDE_POINTER, GC_REVEAL_POINTER): Define
	unconditionally (do not test GC_I_HIDE_POINTERS); update the
	comment.
	* include/gc.h (HIDE_POINTER, REVEAL_POINTER): Define as alias to
	GC_HIDE/REVEAL_POINTER, respectively.
	* include/private/gc_pmark.h (GC_I_HIDE_POINTERS): Do not define.
	* include/private/gc_priv.h (GC_I_HIDE_POINTERS): Ditto.

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc.h (GC_register_my_thread): Refine the comment.

2011-05-08  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc_inline.h (GC_MALLOC_WORDS, GC_CONS): Add missing
	parentheses.